fixed an issue where the pdf divs would overlap with other text on screen sizes <480px

--- a/assets/scss/pages/_adversary-single.scss
+++ b/assets/scss/pages/_adversary-single.scss
@@ -70,9 +70,20 @@
     position: relative;
   }
   .adversary-pdf {
-    position: absolute;
-    top: 0px;
-    right: 0rem;
+    
+    position: relative;
+    top: -1rem;
+    float: left;
+    padding-left: 1rem;
+
+    @media (min-width: 481px) {
+      position: absolute;
+      top: 0px;
+      right: 0rem;
+      float: none;
+      padding-left: 0px;
+    }
+
     a {
       color: $orange;
       padding-right: 1rem;
