--- a/assets/scss/pages/_organization-single.scss
+++ b/assets/scss/pages/_organization-single.scss
@@ -70,9 +70,26 @@
     position: relative;
   }
   .organization-pdf {
-    position: absolute;
-    top: 0px;
-    right: 0rem;
+
+    position: relative;
+    top: -1rem;
+    float: left;
+    padding-left: 1rem;
+
+    @media (min-width: 481px) {
+      position: absolute;
+      top: 0px;
+      right: 0rem;
+      float: none;
+      padding-left: 0px;
+    }
+    
+    @media (max-width: 480px) {
+      position: relative;
+      top: -1rem;
+    }
+
+
     a {
       color: $orange;
       padding-right: 1rem;
